tests/errors/surf_name_11.experr
name 'ghost' is not defined
